--- a/src/style.css
+++ b/src/style.css
@@ -29,6 +29,134 @@ body{
 .colored{
     background-color: red;
 }
+.card_style{
+    display: flex;
+    flex-direction: column;
+    width: 40dvw;
+    background-color: var(--Dark-Blue);
+    padding: 2em 1.5em;
+    border-radius: 1em;
+    height: auto;
+}
+.card_content_text{
+    color: var(--Light-Grey);
+    font-size: var(--p-font-size);
+    
+}
+.star img{
+    transform-origin: center;
+    transform: scale(.9);
+   }
+.rating_state_container{
+  display: block;
+}
+.text_part{
+    margin: 1em 0;
+    width: auto;
+}
+
+.text_part .card_title{
+    font-family: "Overpass",sans-serif;
+    font-weight: 700;
+    margin-top: 1.5em;
+}
+.rating_state_container .star{
+        
+    background-color: var(--Very-Dark-Blue);
+    padding: 1em;
+    border-radius: 50%;
+}
+
+.rating_container{
+    display: flex;
+    flex-direction: column;
+    gap: 1.5em;
+}
+.rating_numbers_container{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+.rating_button{
+    padding: 1em ;
+    border-radius: 3em;
+    font-family: "Overpass", sans-serif;
+    font-weight: 700;
+    color: var(--Very-Dark-Blue);
+    letter-spacing: 2PX;
+    background-color: var(--Orange);
+    border: none;
+    cursor: pointer;
+    transition: background-color 250ms ease-in-out;
+}
+
+.rating_number:hover{
+    color: var(--White);
+    background-color: var(--Orange);
+
+}
+.rating_numbers_container .active{
+    background-color: var(--White);
+    color: var(--Very-Dark-Blue);
+}
+.rating_number{
+    color: var(--Light-Grey);
+    cursor: pointer;
+    transition: background-color 200ms ease-in-out;
+    font-size: var(--p-font-size);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: "Overpass",sans-serif;
+    font-weight: 400;
+    
+}
+.thank_you_state_container{
+    justify-content: center;
+    align-items: center;
+    display: none;
+    /* gap: .5em; */
+}
+.thank_banner{
+        
+    font-size: 12px;
+    color: var(--Orange);
+    background-color: var(--Very-Dark-Blue);
+    padding: .5em 1em;
+    border-radius: 2em;
+    margin: 0 auto;
+}
+.p-2{
+    font-size: 13px;
+}
+.thank_header{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1em;
+}
+.thank_banner{
+        
+    font-size: 12px;
+    color: var(--Orange);
+    background-color: var(--Very-Dark-Blue);
+    padding: .5em 1em;
+    border-radius: 2em;
+    margin: 0 auto;
+}
+.thanks_text{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    /* border: 2px solid silver; */
+}
+.thank_you_state_container .thank_paragraph{
+    text-align: center;
+    font-size: 13px;
+}
 
 @media (max-width: 375px) {
    /* Global styling start*/
@@ -41,89 +169,11 @@ body{
             border-radius: 1em;
             height: auto;
         }
-        .card_content_text{
-            color: var(--Light-Grey);
-            font-size: var(--p-font-size);
-            
-        }
+        
    /* global styling end */
 
     /* rating card component start */
-    .rating_state_container{
-        
-        display: block;
-        
-    }
-    .rating_state_container .star{
-        
-        background-color: var(--Very-Dark-Blue);
-        padding: 1em;
-        border-radius: 50%;
-    }
-   .star img{
-    transform-origin: center;
-    transform: scale(.9);
-   }
-    .text_part{
-        margin: 1em 0;
-        width: auto;
-        /* border: 2px green solid; */
-    }
-
-    .text_part .card_title{
-        font-family: "Overpass",sans-serif;
-        font-weight: 700;
-        margin-top: 1.5em;
-    }
-  
-
-    .rating_container{
-        display: flex;
-        flex-direction: column;
-        gap: 1.5em;
-        
-        /* border: 2px solid blue; */
-    }
-    .rating_numbers_container{
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
-    }
-    .rating_number{
-        color: var(--Light-Grey);
-        cursor: pointer;
-        transition: background-color 200ms ease-in-out;
-        font-size: var(--p-font-size);
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        font-family: "Overpass",sans-serif;
-        font-weight: 400;
-        
-    }
-    .rating_number:hover{
-        color: var(--White);
-        background-color: var(--Orange);
-
-    }
-    .rating_numbers_container .active{
-        background-color: var(--White);
-        color: var(--Very-Dark-Blue);
-    }
-
-    .rating_button{
-        padding: 1em ;
-        border-radius: 3em;
-        font-family: "Overpass", sans-serif;
-        font-weight: 700;
-        color: var(--Very-Dark-Blue);
-        letter-spacing: 2PX;
-        background-color: var(--Orange);
-        border: none;
-        cursor: pointer;
-        transition: background-color 250ms ease-in-out;
-    }
+    
     .rating_button:hover{
         background-color: var(--White);
     }  
@@ -157,10 +207,6 @@ body{
         text-align: center;
         font-size: 13px;
     }
-
-    /* .thank_you_state_container .card_title{
-        border: solid red 2px
-    } */
 
     .thank_banner{
         
